--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,11 @@ sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
+flask-jwt-extended = "*"
+flask-login = "*"
 
 [requires]
 python_full_version = "3.8.13"
+
+[dev-packages]
+flask-login = "*"
