--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,11 @@ flask-cors = "*"
 faker = "*"
 flask-jwt-extended = "*"
 flask-login = "*"
+formik = "*"
 
 [requires]
 python_full_version = "3.8.13"
 
 [dev-packages]
 flask-login = "*"
+flask-jwt-extended = "*"
