--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-social-login-buttons": "^4.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
