--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/styles": "5.15.16",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
